Refactor Lab 3 and Lab 4 notebooks for improved clarity and functionality
- Updated execution counts for code cells to reflect the correct order of execution.
- Transitioned email sending implementation from SendGrid to Mailjet API across both notebooks.
- Enhanced code readability by restructuring function definitions and tool calls.
- Added outputs for various code cells to demonstrate results, including email sending and search functionalities.
- Updated model references and instructions for agents to ensure consistency and clarity in the code.

--- a/2_openai/4_lab4.ipynb
+++ b/2_openai/4_lab4.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,18 +38,28 @@
     "from pydantic import BaseModel, Field\n",
     "from dotenv import load_dotenv\n",
     "import asyncio\n",
-    "import sendgrid\n",
     "import os\n",
-    "from sendgrid.helpers.mail import Mail, Email, To, Content\n",
+    "from mailjet_rest import Client\n",
     "from typing import Dict\n",
     "from IPython.display import display, Markdown"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(override=True)"
    ]
@@ -75,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +94,8 @@
     "words. Capture the main points. Write succintly, no need to have complete sentences or good \\\n",
     "grammar. This will be consumed by someone synthesizing a report, so it's vital you capture the \\\n",
     "essence and ignore any fluff. Do not include any additional commentary other than the summary itself.\"\n",
+    "\n",
+    "MODEL = \"gpt-4.1\"\n",
     "\n",
     "search_agent = Agent(\n",
     "    name=\"Search agent\",\n",
@@ -96,9 +108,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "In 2025, several AI agent frameworks have emerged, each offering unique features to enhance the development and deployment of autonomous AI systems.\n",
+       "\n",
+       "**Agent Lightning** introduces a flexible framework for training AI agents using Reinforcement Learning (RL). It decouples agent execution from training, allowing seamless integration with existing agents developed through various methods. By formulating agent execution as a Markov decision process, it enables RL to handle complex interaction logic, such as multi-agent scenarios and dynamic workflows. ([arxiv.org](https://arxiv.org/abs/2508.03680?utm_source=openai))\n",
+       "\n",
+       "**Polymorphic Combinatorial Framework (PCF)** leverages Large Language Models (LLMs) and mathematical frameworks to guide the design of adaptive AI agents. It enables real-time parameter reconfiguration through mathematically-grounded combinatorial spaces, allowing agents to adapt their core behavioral traits dynamically. PCF supports scalable, dynamic, explainable, and ethical AI applications in domains like customer service, healthcare, robotics, and collaborative systems. ([arxiv.org](https://arxiv.org/abs/2508.01581?utm_source=openai))\n",
+       "\n",
+       "**GoalfyMax** presents a protocol-driven framework for end-to-end multi-agent collaboration. It introduces a standardized Agent-to-Agent (A2A) communication layer built on the Model Context Protocol (MCP), allowing independent agents to coordinate through asynchronous, protocol-compliant interactions. GoalfyMax incorporates a layered memory system that preserves both task rationales and execution traces, enabling structured knowledge retention and continual learning. ([arxiv.org](https://arxiv.org/abs/2507.09497?utm_source=openai))\n",
+       "\n",
+       "**Cognitive Kernel-Pro** is a fully open-source multi-module agent framework designed to democratize the development and evaluation of advanced AI agents. It systematically investigates the curation of high-quality training data for Agent Foundation Models, focusing on the construction of queries, trajectories, and verifiable answers across key domains: web, file, code, and general reasoning. Cognitive Kernel-Pro establishes a new performance standard for accessible, high-capability AI agents. ([arxiv.org](https://arxiv.org/abs/2508.00414?utm_source=openai))\n",
+       "\n",
+       "These frameworks represent significant advancements in AI agent development, offering diverse approaches to enhance the capabilities and adaptability of autonomous systems. "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "message = \"Latest AI Agent frameworks in 2025\"\n",
     "\n",
@@ -126,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,31 +175,43 @@
     "# Use Pydantic to define the Schema of our response - this is known as \"Structured Outputs\"\n",
     "# With massive thanks to student Wes C. for discovering and fixing a nasty bug with this!\n",
     "\n",
+    "\n",
     "class WebSearchItem(BaseModel):\n",
-    "    reason: str = Field(description=\"Your reasoning for why this search is important to the query.\")\n",
+    "    reason: str = Field(\n",
+    "        description=\"Your reasoning for why this search is important to the query.\"\n",
+    "    )\n",
     "\n",
     "    query: str = Field(description=\"The search term to use for the web search.\")\n",
     "\n",
     "\n",
     "class WebSearchPlan(BaseModel):\n",
-    "    searches: list[WebSearchItem] = Field(description=\"A list of web searches to perform to best answer the query.\")\n",
+    "    searches: list[WebSearchItem] = Field(\n",
+    "        description=\"A list of web searches to perform to best answer the query.\"\n",
+    "    )\n",
     "\n",
     "\n",
     "planner_agent = Agent(\n",
     "    name=\"PlannerAgent\",\n",
     "    instructions=INSTRUCTIONS,\n",
-    "    model=\"gpt-4o-mini\",\n",
+    "    model=MODEL,\n",
     "    output_type=WebSearchPlan,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "searches=[WebSearchItem(reason='To find an up-to-date overview of AI agent frameworks available in 2025, including major updates and trends.', query='latest AI agent frameworks 2025'), WebSearchItem(reason='To identify specific open source or commercial AI agent frameworks that have been released or updated around 2025.', query='new AI agent frameworks released 2025'), WebSearchItem(reason='To locate expert reviews, comparisons, or articles analyzing the effectiveness and features of AI agent frameworks in 2025.', query='best AI agent frameworks comparison 2025')]\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "message = \"Latest AI Agent frameworks in 2025\"\n",
     "\n",
     "with trace(\"Search\"):\n",
@@ -174,34 +221,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "@function_tool\n",
     "def send_email(subject: str, html_body: str) -> Dict[str, str]:\n",
-    "    \"\"\" Send out an email with the given subject and HTML body \"\"\"\n",
-    "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('MAILJET_API_KEY'))\n",
-    "    from_email = Email(\"ed@edwarddonner.com\") # Change this to your verified email\n",
-    "    to_email = To(\"ed.donner@gmail.com\") # Change this to your email\n",
-    "    content = Content(\"text/html\", html_body)\n",
-    "    mail = Mail(from_email, to_email, subject, content).get()\n",
-    "    sg.client.mail.send.post(request_body=mail)\n",
-    "    return \"success\""
+    "    \"\"\"Send out an email with the given subject and HTML body\"\"\"\n",
+    "    mailjet = Client(\n",
+    "        auth=(\n",
+    "            os.environ.get(\"MAILJET_API_KEY\"),\n",
+    "            os.environ.get(\"MAILJET_SECRET_KEY\"),\n",
+    "        ),\n",
+    "        version=\"v3.1\",\n",
+    "    )\n",
+    "    data = {\n",
+    "        \"Messages\": [\n",
+    "            {\n",
+    "                \"From\": {\"Email\": \"eliza.zadura@gmail.com\", \"Name\": \"Eliza Zadura\"},\n",
+    "                \"To\": [{\"Email\": \"hatshepam@gmail.com\", \"Name\": \"Hatshepam\"}],\n",
+    "                \"Subject\": subject,\n",
+    "                \"HTMLPart\": html_body,\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "    response = mailjet.send.create(data=data)\n",
+    "    return {\"status\": \"success\", \"status_code\": response.status_code}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FunctionTool(name='send_email', description='Send out an email with the given subject and HTML body', params_json_schema={'properties': {'subject': {'title': 'Subject', 'type': 'string'}, 'html_body': {'title': 'Html Body', 'type': 'string'}}, 'required': ['subject', 'html_body'], 'title': 'send_email_args', 'type': 'object', 'additionalProperties': False}, on_invoke_tool=<function function_tool.<locals>._create_function_tool.<locals>._on_invoke_tool at 0x000002A8CC790400>, strict_json_schema=True, is_enabled=True, tool_input_guardrails=None, tool_output_guardrails=None)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "send_email"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,14 +283,13 @@
     "    name=\"Email agent\",\n",
     "    instructions=INSTRUCTIONS,\n",
     "    tools=[send_email],\n",
-    "    model=\"gpt-4o-mini\",\n",
-    ")\n",
-    "\n"
+    "    model=MODEL,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,21 +301,37 @@
     "    \"The final output should be in markdown format, and it should be lengthy and detailed. Aim \"\n",
     "    \"for 5-10 pages of content, at least 1000 words.\"\n",
     ")\n",
+    "CRITIQUE_INSTRUCTIONS = \"Self-critique in max 5 bullet points. Only include substantive issues, not stylistic nitpicks.\"\n",
     "\n",
     "\n",
     "class ReportData(BaseModel):\n",
-    "    short_summary: str = Field(description=\"A short 2-3 sentence summary of the findings.\")\n",
+    "    short_summary: str = Field(\n",
+    "        description=\"A short 2-3 sentence summary of the findings.\"\n",
+    "    )\n",
     "\n",
     "    markdown_report: str = Field(description=\"The final report\")\n",
     "\n",
-    "    follow_up_questions: list[str] = Field(description=\"Suggested topics to research further\")\n",
+    "    follow_up_questions: list[str] = Field(\n",
+    "        description=\"Suggested topics to research further\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "class ReportCritique(BaseModel):\n",
+    "    critique: str = Field(description=\"A critique of the report\")\n",
     "\n",
     "\n",
     "writer_agent = Agent(\n",
     "    name=\"WriterAgent\",\n",
     "    instructions=INSTRUCTIONS,\n",
-    "    model=\"gpt-4o-mini\",\n",
+    "    model=MODEL,\n",
     "    output_type=ReportData,\n",
+    ")\n",
+    "\n",
+    "critique_agent = Agent(\n",
+    "    name=\"CritiqueAgent\",\n",
+    "    instructions=CRITIQUE_INSTRUCTIONS,\n",
+    "    model=MODEL,\n",
+    "    output_type=ReportCritique,\n",
     ")"
    ]
   },
@@ -259,27 +344,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "async def plan_searches(query: str):\n",
-    "    \"\"\" Use the planner_agent to plan which searches to run for the query \"\"\"\n",
+    "    \"\"\"Use the planner_agent to plan which searches to run for the query\"\"\"\n",
     "    print(\"Planning searches...\")\n",
     "    result = await Runner.run(planner_agent, f\"Query: {query}\")\n",
     "    print(f\"Will perform {len(result.final_output.searches)} searches\")\n",
     "    return result.final_output\n",
     "\n",
+    "\n",
     "async def perform_searches(search_plan: WebSearchPlan):\n",
-    "    \"\"\" Call search() for each item in the search plan \"\"\"\n",
+    "    \"\"\"Call search() for each item in the search plan\"\"\"\n",
     "    print(\"Searching...\")\n",
     "    tasks = [asyncio.create_task(search(item)) for item in search_plan.searches]\n",
     "    results = await asyncio.gather(*tasks)\n",
     "    print(\"Finished searching\")\n",
     "    return results\n",
     "\n",
+    "\n",
     "async def search(item: WebSearchItem):\n",
-    "    \"\"\" Use the search agent to run a web search for each item in the search plan \"\"\"\n",
+    "    \"\"\"Use the search agent to run a web search for each item in the search plan\"\"\"\n",
     "    input = f\"Search term: {item.query}\\nReason for searching: {item.reason}\"\n",
     "    result = await Runner.run(search_agent, input)\n",
     "    return result.final_output"
@@ -294,22 +381,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "async def write_report(query: str, search_results: list[str]):\n",
-    "    \"\"\" Use the writer agent to write a report based on the search results\"\"\"\n",
+    "    \"\"\"Use the writer agent to write a report based on the search results\"\"\"\n",
     "    print(\"Thinking about report...\")\n",
     "    input = f\"Original query: {query}\\nSummarized search results: {search_results}\"\n",
     "    result = await Runner.run(writer_agent, input)\n",
     "    print(\"Finished writing report\")\n",
     "    return result.final_output\n",
     "\n",
-    "async def send_email(report: ReportData):\n",
-    "    \"\"\" Use the email agent to send an email with the report \"\"\"\n",
+    "\n",
+    "async def critique_report(report: ReportData):\n",
+    "    \"\"\"Use the critique agent to self-critique the report\"\"\"\n",
+    "    print(\"Critiquing report...\")\n",
+    "    critique = await Runner.run(critique_agent, report.markdown_report)\n",
+    "    print(\"Finished critiquing report\")\n",
+    "    return critique.final_output\n",
+    "\n",
+    "\n",
+    "async def send_email(report: ReportData, critique: ReportCritique = None):\n",
+    "    \"\"\"Use the email agent to send an email with the report and optional critique\"\"\"\n",
     "    print(\"Writing email...\")\n",
-    "    result = await Runner.run(email_agent, report.markdown_report)\n",
+    "    email_content = report.markdown_report\n",
+    "    if critique:\n",
+    "        email_content += f\"\\n\\n---\\n\\n## Self-Critique\\n\\n{critique.critique}\"\n",
+    "    result = await Runner.run(email_agent, email_content)\n",
     "    print(\"Email sent\")\n",
     "    return report"
    ]
@@ -323,21 +422,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting research...\n",
+      "Planning searches...\n",
+      "Will perform 3 searches\n",
+      "Searching...\n",
+      "Finished searching\n",
+      "Thinking about report...\n",
+      "Finished writing report\n",
+      "Critiquing report...\n",
+      "Finished critiquing report\n",
+      "Writing email...\n",
+      "Email sent\n",
+      "Hooray!\n"
+     ]
+    }
+   ],
    "source": [
-    "query =\"Latest AI Agent frameworks in 2025\"\n",
+    "query = \"The illusion of intelligence in agent demos\"\n",
     "\n",
     "with trace(\"Research trace\"):\n",
     "    print(\"Starting research...\")\n",
     "    search_plan = await plan_searches(query)\n",
     "    search_results = await perform_searches(search_plan)\n",
     "    report = await write_report(query, search_results)\n",
-    "    await send_email(report)  \n",
-    "    print(\"Hooray!\")\n",
+    "    critique = await critique_report(report)\n",
+    "    await send_email(report, critique)\n",
+    "    print(\"Hooray!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Report saved to the_illusion_of_intelligence_in_agent_demos_gpt_4_1_report.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "def save_full_report(query, report, critique=None, model=MODEL):\n",
+    "    \"\"\"Save the full report with summary, critique, and follow-up questions.\"\"\"\n",
+    "    # Generate filename from query and model\n",
+    "    model_suffix = model.replace(\"-\", \"_\").replace(\".\", \"_\")\n",
+    "    filename = query.lower().replace(\" \", \"_\")[:50] + f\"_{model_suffix}_report.md\"\n",
     "\n",
-    "\n"
+    "    content = f\"\"\"# {query}\n",
+    "\n",
+    "## Summary\n",
+    "\n",
+    "{report.short_summary}\n",
+    "\n",
+    "## Report\n",
+    "\n",
+    "{report.markdown_report}\n",
+    "\"\"\"\n",
+    "    if critique:\n",
+    "        content += f\"\"\"\\n## Self-Critique\n",
+    "\n",
+    "{critique.critique}\n",
+    "\"\"\"\n",
+    "\n",
+    "    content += \"\\n## Follow-up Questions\\n\\n\"\n",
+    "    for q in report.follow_up_questions:\n",
+    "        content += f\"- {q}\\n\"\n",
+    "\n",
+    "    with open(filename, \"w\", encoding=\"utf-8\") as f:\n",
+    "        f.write(content)\n",
+    "    print(f\"Report saved to {filename}\")\n",
+    "\n",
+    "\n",
+    "save_full_report(query, report, critique)"
    ]
   },
   {
@@ -383,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
