--- a/2_openai/3_lab3.ipynb
+++ b/2_openai/3_lab3.ipynb
@@ -23,7 +23,15 @@
    "source": [
     "from dotenv import load_dotenv\n",
     "from openai import AsyncOpenAI\n",
-    "from agents import Agent, Runner, trace, function_tool, OpenAIChatCompletionsModel, input_guardrail, GuardrailFunctionOutput\n",
+    "from agents import (\n",
+    "    Agent,\n",
+    "    Runner,\n",
+    "    trace,\n",
+    "    function_tool,\n",
+    "    OpenAIChatCompletionsModel,\n",
+    "    input_guardrail,\n",
+    "    GuardrailFunctionOutput,\n",
+    ")\n",
     "from typing import Dict\n",
     "import sendgrid\n",
     "import os\n",
@@ -33,23 +41,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "load_dotenv(override=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n",
+      "Google API Key exists and begins AI\n",
+      "DeepSeek API Key exists and begins sk-\n",
+      "Groq API Key exists and begins gsk_\n"
+     ]
+    }
+   ],
    "source": [
-    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
-    "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
-    "deepseek_api_key = os.getenv('DEEPSEEK_API_KEY')\n",
-    "groq_api_key = os.getenv('GROQ_API_KEY')\n",
+    "openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "google_api_key = os.getenv(\"GOOGLE_API_KEY\")\n",
+    "deepseek_api_key = os.getenv(\"DEEPSEEK_API_KEY\")\n",
+    "groq_api_key = os.getenv(\"GROQ_API_KEY\")\n",
     "\n",
     "if openai_api_key:\n",
     "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
@@ -74,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,18 +141,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "deepseek_client = AsyncOpenAI(base_url=DEEPSEEK_BASE_URL, api_key=deepseek_api_key)\n",
     "gemini_client = AsyncOpenAI(base_url=GEMINI_BASE_URL, api_key=google_api_key)\n",
     "groq_client = AsyncOpenAI(base_url=GROQ_BASE_URL, api_key=groq_api_key)\n",
     "\n",
-    "deepseek_model = OpenAIChatCompletionsModel(model=\"deepseek-chat\", openai_client=deepseek_client)\n",
-    "gemini_model = OpenAIChatCompletionsModel(model=\"gemini-2.0-flash\", openai_client=gemini_client)\n",
-    "llama3_3_model = OpenAIChatCompletionsModel(model=\"llama-3.3-70b-versatile\", openai_client=groq_client)"
+    "deepseek_model = OpenAIChatCompletionsModel(\n",
+    "    model=\"deepseek-chat\", openai_client=deepseek_client\n",
+    ")\n",
+    "gemini_model = OpenAIChatCompletionsModel(\n",
+    "    model=\"gemini-2.0-flash\", openai_client=gemini_client\n",
+    ")\n",
+    "llama3_3_model = OpenAIChatCompletionsModel(\n",
+    "    model=\"llama-3.3-70b-versatile\", openai_client=groq_client\n",
+    ")"
    ]
   },
   {
@@ -131,14 +166,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sales_agent1 = Agent(name=\"DeepSeek Sales Agent\", instructions=instructions1, model=deepseek_model)\n",
-    "sales_agent2 =  Agent(name=\"Gemini Sales Agent\", instructions=instructions2, model=gemini_model)\n",
-    "sales_agent3  = Agent(name=\"Llama3.3 Sales Agent\",instructions=instructions3,model=llama3_3_model)"
+    "# If model is passes as a string, it will be converted to an OpenAI compatible model\n",
+    "sales_agent1 = Agent(\n",
+    "    name=\"DeepSeek Sales Agent\", instructions=instructions1, model=deepseek_model\n",
+    ")\n",
+    "\n",
+    "\n",
+    "sales_agent2 = Agent(\n",
+    "    name=\"Gemini Sales Agent\", instructions=instructions2, model=gemini_model\n",
+    ")\n",
+    "\n",
+    "\n",
+    "sales_agent3 = Agent(\n",
+    "    name=\"Llama3.3 Sales Agent\", instructions=instructions3, model=llama3_3_model\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,16 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "@function_tool\n",
     "def send_html_email(subject: str, html_body: str) -> Dict[str, str]:\n",
-    "    \"\"\" Send out an email with the given subject and HTML body to all sales prospects \"\"\"\n",
-    "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('MAILJET_API_KEY'))\n",
-    "    from_email = Email(\"ed@edwarddonner.com\")  # Change to your verified sender\n",
-    "    to_email = To(\"ed.donner@gmail.com\")  # Change to your recipient\n",
+    "    \"\"\"Send out an email with the given subject and HTML body to all sales prospects\"\"\"\n",
+    "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get(\"MAILJET_API_KEY\"))\n",
+    "    from_email = Email(\"eliza.zadura@gmail.com\")  # Change to your verified sender\n",
+    "    to_email = To(\"hatshepam@gmail.com\")  # Change to your recipient\n",
     "    content = Content(\"text/html\", html_body)\n",
     "    mail = Mail(from_email, to_email, subject, content).get()\n",
     "    sg.client.mail.send.post(request_body=mail)\n",
@@ -169,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,16 +226,28 @@
     "You are given a text email body which might have some markdown \\\n",
     "and you need to convert it to an HTML email body with simple, clear, compelling layout and design.\"\n",
     "\n",
-    "subject_writer = Agent(name=\"Email subject writer\", instructions=subject_instructions, model=\"gpt-4o-mini\")\n",
-    "subject_tool = subject_writer.as_tool(tool_name=\"subject_writer\", tool_description=\"Write a subject for a cold sales email\")\n",
+    "subject_writer = Agent(\n",
+    "    name=\"Email subject writer\", instructions=subject_instructions, model=\"gpt-4o-mini\"\n",
+    ")\n",
+    "subject_tool = subject_writer.as_tool(\n",
+    "    tool_name=\"subject_writer\",\n",
+    "    tool_description=\"Write a subject for a cold sales email\",\n",
+    ")\n",
     "\n",
-    "html_converter = Agent(name=\"HTML email body converter\", instructions=html_instructions, model=\"gpt-4o-mini\")\n",
-    "html_tool = html_converter.as_tool(tool_name=\"html_converter\",tool_description=\"Convert a text email body to an HTML email body\")"
+    "html_converter = Agent(\n",
+    "    name=\"HTML email body converter\",\n",
+    "    instructions=html_instructions,\n",
+    "    model=\"gpt-4o-mini\",\n",
+    ")\n",
+    "html_tool = html_converter.as_tool(\n",
+    "    tool_name=\"html_converter\",\n",
+    "    tool_description=\"Convert a text email body to an HTML email body\",\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,11 +256,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "instructions =\"You are an email formatter and sender. You receive the body of an email to be sent. \\\n",
+    "instructions = \"You are an email formatter and sender. You receive the body of an email to be sent. \\\n",
     "You first use the subject_writer tool to write a subject for the email, then use the html_converter tool to convert the body to HTML. \\\n",
     "Finally, you use the send_html_email tool to send the email with the subject and HTML body.\"\n",
     "\n",
@@ -212,12 +270,13 @@
     "    instructions=instructions,\n",
     "    tools=email_tools,\n",
     "    model=\"gpt-4o-mini\",\n",
-    "    handoff_description=\"Convert an email to HTML and send it\")"
+    "    handoff_description=\"Convert an email to HTML and send it\",\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +312,8 @@
     "    instructions=sales_manager_instructions,\n",
     "    tools=tools,\n",
     "    handoffs=handoffs,\n",
-    "    model=\"gpt-4o-mini\")\n",
+    "    model=\"gpt-4o-mini\",\n",
+    ")\n",
     "\n",
     "message = \"Send out a cold sales email addressed to Dear CEO from Alice\"\n",
     "\n",
@@ -272,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,17 +340,18 @@
     "    is_name_in_message: bool\n",
     "    name: str\n",
     "\n",
-    "guardrail_agent = Agent( \n",
+    "\n",
+    "guardrail_agent = Agent(\n",
     "    name=\"Name check\",\n",
     "    instructions=\"Check if the user is including someone's personal name in what they want you to do.\",\n",
     "    output_type=NameCheckOutput,\n",
-    "    model=\"gpt-4o-mini\"\n",
+    "    model=\"gpt-4o-mini\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,12 +359,15 @@
     "async def guardrail_against_name(ctx, agent, message):\n",
     "    result = await Runner.run(guardrail_agent, message, context=ctx.context)\n",
     "    is_name_in_message = result.final_output.is_name_in_message\n",
-    "    return GuardrailFunctionOutput(output_info={\"found_name\": result.final_output},tripwire_triggered=is_name_in_message)"
+    "    return GuardrailFunctionOutput(\n",
+    "        output_info={\"found_name\": result.final_output},\n",
+    "        tripwire_triggered=is_name_in_message,\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,10 +377,10 @@
     "    tools=tools,\n",
     "    handoffs=[emailer_agent],\n",
     "    model=\"gpt-4o-mini\",\n",
-    "    input_guardrails=[guardrail_against_name]\n",
-    "    )\n",
+    "    input_guardrails=[guardrail_against_name],\n",
+    ")\n",
     "\n",
-    "message = \"Send out a cold sales email addressed to Dear CEO from Alice\"\n",
+    "message = \"Send out a cold sales email addressed to Dear CEO from Busines Development\"\n",
     "\n",
     "with trace(\"Protected Automated SDR\"):\n",
     "    result = await Runner.run(careful_sales_manager, message)"
@@ -337,7 +401,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "message = \"Send out a cold sales email addressed to Dear CEO from Head of Business Development\"\n",
     "\n",
     "with trace(\"Protected Automated SDR\"):\n",
@@ -384,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
